codecreature.net/chat/chat.css
body, html {
	margin: 0px; padding: 0px; width: 100%; height: 100%;
}

/* modify these on other pages to change colors */
.chatbox {
	--bg: var(--l-blue);
	--borders: var(--blue);
	--header: var(--green);
	--header-text: var(--d-blue);
	--header-hover: var(--white);
	--header-popup: var(--l-green);
	--bubble-bg: var(--white);
	--bubble-shadow: var(--blue);
	--bubble-text: var(--blue);
	--username: var(--d-blue);
	--mod: var(--pink);
	--mod-border: var(--ll-pink);
	--admin: var(--d-orange);
	--admin-border: var(--yellow);
	--pronouns: var(--blue);
	--input-box-bg: var(--yellow);
	--input-box-focus: var(--l-green);
	--input-box-text: var(--d-blue);
	--send-bg: var(--green);
	--send: var(--d-blue);
	--send-hover: var(--white);
	--font: 'Yet R', sans-serif;
}

.chatbox {
	background: var(--bg);
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	font-family: var(--font);
}

.chatbox > header {
	position: relative;
	background: var(--header);
	border-bottom: 4px var(--borders) solid;
	padding: .3rem .75rem;
	font-size: 1.25rem;
	
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-end;
	align-items: center;
	gap: .6rem;
	
	a, a:link, a:visited, button {
		color: var(--header-text);
		&:hover, &:focus, &:focus-visible {
			color: var(--header-hover);
		}
	}
	#page-settings-contents { font-size: 1.15rem; }
}
#page-settings-button, #page-settings-contents {
	--open-button-fill: var(--header-text);
	--open-button-background: none;
	--open-button-border: none;
	--color: inherit;
	--accent: var(--d-blue);
}
#page-settings-button:hover * { fill: var(--header-hover); stroke: var(--header-hover); }
#page-settings-button {
  position: relative;
	margin: -.3em;
	padding: 0 .25em;
	top: 0; right: 0;
	display: inline-block;
  color: var(--open-button-fill);
  background: var(--open-button-background);
  border: var(--open-button-border);
  font-size: 1em;
  line-height: 0;
  border-radius: 50%;
}
#page-settings-contents {
	position: absolute;
	top: 100%;
	margin: 0;
	border-radius: 0 0 0 1rem;
	z-index: 1000;
	box-shadow: 5px 5px var(--borders);
	moz-box-sizing: border-box; webkit-box-sizing: border-box; box-sizing: border-box;
	right: 0;
	max-width: min(100%, 22rem);
	background: var(--header-popup);
	text-align: right;
}

.right-click-menu {
	position: absolute;
	background: var(--bubble-bg);
	display: flex; flex-direction: column;
	align-items: flex-start;
	gap: .3em;
	padding: .5em .75em;
	margin-top: 10px;
	margin-left: 5px;
	box-shadow: 4px 6px var(--blue);
	border-radius: 0 1rem 1rem 1rem;
	border: 3px var(--blue) solid;
	button:hover { color: var(--d-blue); }
}
.customCursor .right-click-menu {
	margin-top: 15px;
	margin-left: 20px;
}

[popover] {
	background: none;
	padding: none;
	border: none;
	color: var(--blue);
}
[popover] > * {
	border: 4px var(--blue) solid;
}
[popover] > header {
	background: var(--green);
	padding: .5rem;
	border-bottom: none;
	border-radius: 1rem 1rem 0 0;
	h3 { margin: 0; }
}
[popover] > .content {
	background: var(--white);
	border-top: none;
	padding: .5rem;
	border-radius: 0 0 1rem 1rem;
}
#edit-message .content { display: flex; flex-direction: column; }
#edit-message textarea {
	resize: none;
	background: none; border: none;
	width: min(25em,90vw);
	height: min(7em, 60vh);
	padding: .5em;
	font-family: inherit;
	color: inherit;
}
#edit-message textarea:focus { outline: none; }
#edit-message .bottom-buttons {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	button {
		border-radius: 1em;
		padding: .15em .6em;
	}
	.cancel { background: var(--red); color: var(--white); }
	.cancel:hover { background: var(--pink); }
	.submit { background: var(--blue); color: var(--white); }
	.submit:hover { background: var(--green); }
}

/* user login/details iframe */
#user {
	width: 100%;
	flex-grow: 1;
}
.chatbox:has(#user:not(.hidden)) {
	#messages, #new-message { display: none; }
}

.messages {
	display: flex;
	flex-flow: column-reverse nowrap;
	flex-grow: 1;
	overflow-y: auto;
	gap: .75rem;
	padding: 1rem .75rem;
	moz-box-sizing: border-box; webkit-box-sizing: border-box; box-sizing: border-box;
	color: var(--bubble-text);
}

/* put the load older messages button at top of page */
#load-older { order: 1000; }

.message { width: min(88%, 40rem); }

.message {
	--icon-height: 3rem;
	display: flex;
	align-items: flex-end;
	gap: .5rem;
	font-size: 1rem;
	margin-bottom: 4px;
}
.message.self { flex-direction: row-reverse; margin-left: auto; }

.deleted {
	display: block;
	padding-left: var(--icon-height); padding-right: var(--icon-height);
	font-style: italic;
	text-align: center;
}

.message > * { box-shadow: 4px 6px var(--bubble-shadow); }

.message .bubble {
	padding: .5em .85em .75em .75em;
	moz-box-sizing: border-box; webkit-box-sizing: border-box; box-sizing: border-box;
	background: var(--bubble-bg);
	border-radius: 1rem 1rem 1rem 0;
	flex-grow: 1;
}
.message.self .bubble { border-radius: 1rem 1rem 0 1rem; }

.message .bubble > header {
	margin-bottom: .15rem;
	width: 100%;
	line-height: 1;
	display: flex;
	justify-content: flex-end;
	gap: .3em;
	@media screen and (width < 450px) {
		flex-direction: column;
		align-items: flex-start;
	}
}

.message .icon {
	width: var(--icon-height);
	height: var(--icon-height);
	flex-shrink: 0;
	border-radius: 50%;
	margin-bottom: -4px;
}

.message .username {
	font-weight: bold;
	font-size: 1.25em;
	color: var(--username);
}
.message a.username:hover {
	text-decoration: underline;
}
.message.admin .username { color: var(--admin); }
.message.admin .bubble { border: 4px var(--admin-border) solid; }
.message.moderator .username { color: var(--mod); }
.message.moderator .bubble { border: 4px var(--mod-border) solid; }
.message.admin { .username:before, .username:after { background: url('/graphix/emojis/star.png'); }}
.message.moderator { .username:before, .username:after { background: url('/graphix/emojis/heart.png'); }}
.message.admin, .message.moderator { .username:before, .username:after {
	content: '';
	display: inline-block;
	width: .85em;
	aspect-ratio: 1;
	background-size: 100%;
	margin-right: .1em;
}}
.message.admin, .message.moderator { .username:before { margin-right: .1em; }}
.message.admin, .message.moderator { .username:after { margin-left: .1em; }}

.message .username {
	font-weight: bold;
	font-size: 1.25em;
	color: var(--username);
}

.message.pink { .username, .pronouns { color: var(--pink); }}
.message.orange { .username, .pronouns { color: var(--d-orange); }}
.message.green { .username, .pronouns { color: var(--d-green); }}
.messageg.blue { .username, .pronouns { color: var(--blue); }}
.message.purple { .username, .pronouns { color: var(--purple); }}

.message .pronouns, .message .date {
	font-size: .9em;
	opacity: 0.75;
	line-height: 1.15em;
	margin-top:.15em;
}
.message .pronouns { color: var(--pronouns); }
.message .date {
	flex-grow: 1;
	text-align: right;
	font-style: italic;
}

#new-message {
	display: flex;
	background: var(--input-box-bg);
	color: var(--input-box-text);
	border-top: 4px var(--borders) solid;
}
#message-input {
	font-family: 'Yet R', sans-serif;
}
#message-input::placeholder {
	color: var(--d-orange);
	opacity: 0.65;
	font-style: italic;
}
#new-message button[type=submit] {
	background: var(--send-bg);
	color: var(--send);
	padding: .25rem .5rem;
	&:hover, &:focus, &:focus-visible {
		color: var(--send-hover);
	}
	&:disabled span {
		color: var(--d-green);
	}
}
#message-input {
	resize: none;
	flex-grow: 1;
	background: none;
	color: inherit;
	font-size: .85em;
	padding: .5rem .75rem;
	moz-box-sizing: border-box; webkit-box-sizing: border-box; box-sizing: border-box;
	border: none;
}
#message-input:focus, #message-input:focus-visible {
	background: var(--input-box-focus);
	outline: none;
}
#message-input:focus::placeholder , #message-input:focus-visible::placeholder  {
	color: var(--green);
	opacity: 1;
}

.message .content img {
	max-width: 100%;
}

/* stack of messages by one user */
.message.stack-top { }
.message.stack:not(.stack-top) {
	margin-top: calc(-0.75rem + 5px);
	.bubble > header { float: right; width: fit-content; }
	.username { display: none; }
	.pronouns { display: none; }
}
/* end of a stack */
.message.stack:not(.stack-top) + .message.stack {
	.icon { visibility: hidden; height: 1px; }
}

